<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_saved_coin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/medium_padding"
    android:paddingEnd="@dimen/medium_padding"
    android:paddingStart="@dimen/dp_0"
    android:layout_marginEnd="@dimen/small_margin"
    android:background="@drawable/bg_card_my_coins">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_coin"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_coin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        style="@style/Header1"
        tools:text="@string/BTC"
        app:layout_constraintStart_toEndOf="@id/iv_coin"
        app:layout_constraintTop_toTopOf="@id/iv_coin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_coin_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        style="@style/Subtitle2"
        tools:text="@string/bitcoin"
        android:textColor="@color/gray_seal"
        app:layout_constraintStart_toEndOf="@id/iv_coin"
        app:layout_constraintTop_toBottomOf="@id/tv_coin_name"
        app:layout_constraintBottom_toBottomOf="@id/iv_coin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_price"
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginVertical="@dimen/large_margin"
        style="@style/Subtitle3"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/coins"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_coin"/>

    <TextView
        android:id="@+id/tv_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Subtitle3"
        android:text="@string/profit"
        android:textColor="@color/green_lime"
        app:layout_constraintStart_toEndOf="@id/tv_coin_full_name"
        app:layout_constraintTop_toTopOf="@id/tv_coins"
        app:layout_constraintBottom_toBottomOf="@id/tv_price"/>
</androidx.constraintlayout.widget.ConstraintLayout>