<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/medium_padding"
    android:background="@drawable/bg_card_profile"
    app:cardCornerRadius="@dimen/medium_radius">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_coin"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/bg_img_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        style="@style/Header1"
        android:text="@string/profile_name"
        android:textColor="@color/color_on_secondary"
        app:layout_constraintStart_toEndOf="@id/iv_coin"
        app:layout_constraintTop_toTopOf="@id/iv_coin"
        app:layout_constraintBottom_toBottomOf="@id/iv_coin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_total_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        style="@style/Subtitle2"
        android:text="@string/total_coins"
        android:textColor="@color/gray_pearl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_coin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        style="@style/Header1"
        android:textColor="@color/color_on_secondary"
        android:text="@string/coins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_coins"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_profit_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_coins"
        app:layout_constraintBottom_toBottomOf="@id/tv_coins">

        <include layout="@layout/profit_value"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>